# ChatBot

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  INFINITY_LOG.md  PENDING.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_document.txt
.claude/: BUSINESS.md  PLAN.md
.claude/skills/consult/: SKILL.md
scripts/: eval_phase4_retrieval.py  gemini_consult.py  generate_judikat_abstracts.py  ingest_judikaty.py  update_widget_prompt.py  verify_judikaty.py
src/: __init__.py  config.py  main.py
src/core/: __init__.py  firestore.py  gemini.py  rate_limiter.py  storage.py
src/features/admin/: router.py
src/features/admin_portal/: __init__.py  models.py  router.py
src/features/analytics/: __init__.py  models.py  router.py  service.py
src/features/auth/: __init__.py  dependencies.py  jwt.py
src/features/billing/: __init__.py  models.py  router.py  service.py
src/features/chat/: memory.py  models.py  response_guard.py  retrieval.py  router.py  sanitizer.py  service.py
src/features/customer_portal/: __init__.py  embed.py  models.py  router.py
src/features/customers/: __init__.py  models.py
src/features/documents/: chunking.py  models.py  processor.py  router.py  service.py
src/features/scraper/: __init__.py  extractor.py  models.py  router.py  service.py  sitemap.py
src/utils/: language.py
static/portal/: index.html
static/widget/: chatbot-widget.js
tests/: conftest.py
tests/unit/: test_health.py  test_response_guard.py  test_retrieval_build_context.py
(+1 files in other folders)
