[project]
name = "chatbot-platform"
version = "0.1.0"
description = "ChatBase alternative - embeddable chatbot platform with RAG"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "PeckaMilan"}
]

dependencies = [
    # Core
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # GCP
    "google-cloud-firestore>=2.14.0",
    "google-cloud-storage>=2.14.0",
    "firebase-admin>=6.4.0",

    # Gemini AI
    "google-genai>=1.0.0",

    # Document Processing
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "langchain>=0.1.0",
    "langchain-text-splitters>=0.0.1",

    # Utilities
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
